<?xml version="1.0"?>
<package>
  <name>orb_line</name>
  <version>0.0.0</version>
  <description>orb_line package</description>
  <maintainer email="junjin@todo.todo">junjin</maintainer>
  <license>TODO</license>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
<build_depend>opencv</build_depend>


  <run_depend>opencv</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
